# TSPGA

./: .gitignore  CMakeLists.txt  README.md
inc/: bruteforce.h  ga.h  ga_tb.h  graph.h  graph_tb.h  interface.h  permute.h  phenotype.h  reader.h  reader_tb.h  tsp.h
src/: bruteforce.c  ga.c  ga_tb.c  graph.c  graph_tb.c  interface.c  main.c  permute.c  phenotype.c  reader.c  reader_tb.c  testbench.c  tsp.c
